# dupin

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  ContributorAgreement.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  changelog.rst  conftest.py  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements3.10.txt  requirements3.11.txt  requirements3.12.txt  requirements3.9.txt
.github/ISSUE_TEMPLATE/: bug_fix.md  bug_fix.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/install-nopython-dependencies/: action.yml
.github/environments/: requirements3.11.txt  requirements3.12.txt  requirements3.13.txt  requirements3.9.txt  update-lockfiles.sh
.github/workflows/: ci-oldest-reqs.txt  deploy-pypi.yml  deploy-test-pypi.yml  deploy.yml  format-check.yml  install-nopython-dependencies.yml  publish-packages.yml  requirements-test.txt  run-pytest.yml  stale.yaml  update-uv-lockfiles.yaml
.github/workflows/environments/: requirements-build.in  requirements3.10.txt  requirements3.11.txt  requirements3.12.txt  requirements3.13.txt  requirements3.9.txt  update-lockfiles.sh
Dynp/: .gitignore  CMakeLists.txt  README.md
Dynp/src/cpp/: dupin.cpp  dupin.h
Dynp/src/interface/: dupininterface.cpp  dupininterface.py
docs/: Makefile  citing.rst  conf.py  environment.yml  example.py  examples.rst  index.rst  installation.rst  make.bat  module-data-aggregate.rst  module-data-base.rst  module-data-freud.rst  module-data-logging.rst  module-data-map.rst  module-data-reduce.rst  module-data-spatial.rst  module-data.rst  module-detect-offline.rst  module-detect-online.rst  module-detect.rst  module-preprocessing-filter.rst  module-preprocessing-signal.rst  module-preprocessing-supervised.rst  module-preprocessing.rst  pipeline.rst  requirements.txt  tutorials.rst  usage.rst
docs/_templates/: page.html
docs/figures-gen/: make-cpd-movie.ipynb  signal-gen.py
docs/tutorials/00-Introducing-dupin/: 00-index.ipynb  01-basic-approach.ipynb  02-data-pipeline.ipynb  03-collecting-data.ipynb  04-feature-selection.ipynb  05-detect-events.ipynb  lj-sim.gsd
docs/tutorials/01-Custom-generators/: Custom-generator.ipynb
docs/tutorials/02-HOOMD-burst-writer-with-online-detection/: HOOMD-burst-with-online.ipynb
docs/tutorials/03-Logging-particles-undergoing-detection/: Logging-particles-example.ipynb
docs/tutorials/data/: lj-sim.xyz
dupin/: CMakeLists.txt  __init__.py  errors.py  postprocessing.py
dupin/data/: __init__.py  aggregate.py  base.py  freud.py  logging.py  map.py  reduce.py  spatial.py
dupin/detect/: __init__.py  costs.py  detect.py  dynp.py
dupin/detect/offline/: costs.py  detect.py
dupin/detect/online/: detector_status.py  std_dev.py
dupin/preprocessing/: __init__.py  filter.py  signal.py  supervised.py
event_detection/: __init__.py  detector.py  event.py  postprocessing.py  signal.py  util.py
event_detection/data/: __init__.py  aggregate.py  base.py  freud.py  logging.py  map.py  reduce.py  spatial.py  util.py
event_detection/detect/: __init__.py  detector.py  std_dev.py
event_detection/detect/offline/: __init__.py  costs.py  detect.py
event_detection/detect/online/: __init__.py  detector.py  std_dev.py
event_detection/offline/: __init__.py  aggegate.py  costs.py  detect.py  smoothing.py  supervised.py
event_detection/online/: __init__.py
event_detection/online/detect/: detector.py  std_dev.py
event_detection/preprocessing/: __init__.py  filter.py  signal.py  supervised.py
event_detection/signal/: __init__.py  freud.py  generate.py  reduce.py  signal.py  sph_harmonics.py  util.py
notebooks/: base-detect.ipynb  data-pipeline.ipynb  lj-data.h5  lj-log.h5  lj-sim.ipynb  supervised.ipynb
notebooks/Introducing dupin/: 00-index.ipynb  01-basic-approach.ipynb  02-data-pipeline.ipynb  03-collecting-data.ipynb  04-feature-selection.ipynb  05-detect-events.ipynb
requirements/: requirements-build.txt  requirements-test.txt  requirements-testing.txt  requirements.txt
src/: CMakeLists.txt  dupin.cpp  dupin.h  dupininterface.cpp  module.cpp
tests/data/: test_aggregate.py  test_base.py  test_freud.py  test_logging.py  test_map.py  test_reduce.py
tests/detect/: test_costs.py  test_detect.py
tests/detect/offline/: test_costs.py  test_detect.py
tests/preprocessing/: test_filter.py  test_signal.py  test_supervised.py
